# project-jade

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  COMO_USAR.md  README.md  main.py  projeto_jade_arquitetura.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/add-jade-tool/: SKILL.md
.claude/skills/sync-obsidian-rag/: SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
core/: __init__.py  agent_router.py  chat.py  config.py  journal.py  llm_engine.py  memory.py  model_router.py  mood.py  notes.py  persona.py  profile.py
database/: .gitkeep
interfaces/: __init__.py  api.py  voice_service.py
interfaces/whatsapp_bot/: README.md
tests/: test_journal.py  test_memory.py  test_model_router.py  test_persona.py  test_smoke.py  test_system_tool.py  test_voice.py
tools/: __init__.py  base.py  obsidian_tool.py  registry.py  system_tool.py
