[project]
name = "project-jade"
version = "0.1.0"
description = "Assistente pessoal agentic, privacy-first, que unifica ferramentas e rotinas sob um LLM."
requires-python = ">=3.11"
readme = "README.md"

# ─────────────────────────────────────────────────────────────
# Ruff — lint + import-sort + formatação
# ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["database", ".venv"]

[tool.ruff.lint]
# E/W pycodestyle · F pyflakes · I isort · UP pyupgrade · B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]  # comprimento de linha é responsabilidade do formatter

[tool.ruff.lint.per-file-ignores]
# main.py reconfigura o stdout ANTES dos imports (necessário no Windows).
"main.py" = ["E402"]
# FastAPI usa `= File(...)`/`= Depends(...)` como default (padrão do framework).
"interfaces/api.py" = ["B008"]

# ─────────────────────────────────────────────────────────────
# Bandit — análise estática de segurança (SAST)
# ─────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "database"]

# ─────────────────────────────────────────────────────────────
# Pytest
# ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
